syntax = "proto3";

package gitlab.ozon.dev.go_8_middle_project.pkg.loms.v1;

option go_package = "gitlab.ozon.dev/go/classroom-8/students/workshop-2/pkg/api/loms/v1;loms";

import "google/api/annotations.proto"; // REST описание методов
// import "google/api/field_behavior.proto";
// import "protoc-gen-openapiv2/options/annotations.proto"; // openapiv2 спецификация
// import "validate/validate.proto"; // https://github.com/bufbuild/protoc-gen-validate/blob/main/docs.md

service LOMS {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {
    option (google.api.http) = {
    post: "/v1/order/create"
      body: "order"
    };
  }

  rpc GetStockInfo(GetStockInfoRequest) returns (GetStockInfoResponse) {
    option (google.api.http) = {
    post: "/v1/stock/info"
    };
  }
}


message CreateOrderRequest {
  Order order = 1;
}

message Order {
	int64 user_id = 1; 
  repeated CreateOrderItem items = 2;
}

message CreateOrderItem {
  int64 sku = 1;
  uint32 count = 2; // <= uint16 
}

message CreateOrderResponse {
  int64 order_id = 1;
}

message GetStockInfoRequest{
  uint32 sku = 1;
}

message GetStockInfoResponse {
  uint64 count = 1;
}

message CreateOrderErrorResponse {
  string message = 1;
}

message GetStockInfoErrorResponse {
  string message = 1;
}